# GPI

./: CMakeLists.txt  README.md
include/: gpi_debug.h  o.h  o_debug.h
scripts/: debian_install_deps.sh
src/: .o_debug.c.swp  gpi.c  gpi_debug.c  main.c  o.c  o_debug.c
